# MotionTrackingAndroid

./: .gitignore  RealTime_ObjectTracking_C++_OpenCV  build.gradle  gradle.properties  import-summary.txt  settings.gradle
app/: Android.mk  Application.mk  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/bd/shuyu/motiontrackingandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/bd/shuyu/motiontrackingandroid/: BasicOpenCV_Camera_Activity.java  (+24 more)
app/src/main/java/interface_regionSelection/: RegionSelection.java
app/src/main/jni/: com_bd_shuyu_motiontrackingandroid_JniTest.cpp  com_bd_shuyu_motiontrackingandroid_JniTest.h  com_bd_shuyu_motiontrackingandroid_OpencvNativeCls.cpp  com_bd_shuyu_motiontrackingandroid_OpencvNativeCls.h  com_bd_shuyu_motiontrackingandroid_OpencvNativeFaceDetection.cpp  com_bd_shuyu_motiontrackingandroid_OpencvNativeFaceDetection.h  com_bd_shuyu_motiontrackingandroid_OpencvNativeObjectTracker.cpp  com_bd_shuyu_motiontrackingandroid_OpencvNativeObjectTracker.h  com_bd_shuyu_motiontrackingandroid_OpencvNatives_OpencvNativeCls.cpp  com_bd_shuyu_motiontrackingandroid_OpencvNatives_OpencvNativeCls.h  com_bd_shuyu_motiontrackingandroid_OpencvNatives_OpencvNativeFaceDetection.cpp  com_bd_shuyu_motiontrackingandroid_OpencvNatives_OpencvNativeFaceDetection.h
app/src/main/res/layout/: activity_camera.xml  activity_camera_sel.xml  activity_camera_sel_tracking.xml  activity_main.xml  activity_main_jiang.xml  activity_main_od.xml  activity_soundgen.xml  activity_video.xml  buttons.xml  camera_sel.xml  ocv.xml
app/src/main/res/values/: strings.xml
(+93 files in other folders)
